--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
+    "node-sass": "^7.0.1",
+    "sass": "^1.50.0",
     "vite": "^2.9.0"
   }
 }
