--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "^4.17.3",
     "gsap": "^3.10.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "three": "^0.139.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
