--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babylonjs/core": "^5.3.0",
     "esm": "^3.2.25",
     "express": "^4.17.3",
     "gsap": "^3.10.3",
