--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@babylonjs/core": "^5.3.0",
+    "@babylonjs/gui": "^5.3.0",
     "esm": "^3.2.25",
     "express": "^4.17.3",
     "gsap": "^3.10.3",
     "react": "^17.0.2",
+    "react-babylonjs": "^3.1.2",
     "react-dom": "^17.0.2",
     "three": "^0.139.2"
   },
