--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.0.0",
     "react-spinners": "^0.11.0",
     "react-spring-carousel": "^2.0.13",
+    "react-tsparticles": "^2.0.6",
     "react-use-gesture": "^9.1.3",
     "sancho": "^3.5.6",
     "three": "^0.139.2"
