Added an object to hold projects.

--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ dist-ssr
 
 # Gatsby files
 .cache/
-# Comment in the public line in if your project uses Gatsby and not Next.js
+# Comment in the public line in if your project uses Gatsby and not Next.scripts
 # https://nextjs.org/blog/next-9-1#public-directory-support
 # public
 
