--- a/package.json
+++ b/package.json
@@ -8,24 +8,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/core": "^10.3.1",
-    "@emotion/css": "^10.0.27",
-    "@emotion/react": "^11.9.0",
-    "@geist-ui/core": "^2.3.8",
-    "@iconify/icons-simple-icons": "^1.2.12",
     "@react-spring/parallax": "^9.4.4",
     "@react-spring/three": "^9.4.4",
     "@react-three/fiber": "^8.0.12",
-    "@reduxjs/toolkit": "^1.8.1",
+    "bootstrap": "^5.1.3",
+    "lodash": "^4.17.21",
     "nanoid": "^3.3.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "react-spinners": "^0.11.0",
     "react-spring-carousel": "^2.0.13",
-    "react-tsparticles": "^2.0.6",
-    "react-use-gesture": "^9.1.3",
-    "sancho": "^3.5.6",
-    "three": "^0.139.2"
+    "react-use-gesture": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
